--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "hyphen-danish.tar.xz": ca7da303b3579816ee0182f958ad36d1db5a1eb6
+  hyphen-danish.tar.xz: e5990178825158e8aa349d804bf763d6da782c3f
