--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  hyphen-danish.tar.xz: 498b08b76d2b91bd7b97e5fa2fd6175c0f6b229c
+  hyphen-danish.r58652.tar.xz: 23610cf73e4443d759e0a452c2deaf9f5b908b5c
